--- a/linux-nspa/config
+++ b/linux-nspa/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.15.0-rc7 Kernel Configuration
+# Linux/x86 6.16.0-rc2 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.1.1 20250425"
 CONFIG_CC_IS_GCC=y
@@ -250,7 +250,6 @@ CONFIG_UTS_NS=y
 CONFIG_TIME_NS=y
 CONFIG_IPC_NS=y
 CONFIG_USER_NS=y
-CONFIG_USER_NS_UNPRIVILEGED=y
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
@@ -292,6 +291,7 @@ CONFIG_PCSPKR_PLATFORM=y
 # CONFIG_BASE_SMALL is not set
 CONFIG_FUTEX=y
 CONFIG_FUTEX_PI=y
+CONFIG_FUTEX_PRIVATE_HASH=y
 CONFIG_EPOLL=y
 CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
@@ -309,7 +309,6 @@ CONFIG_CACHESTAT_SYSCALL=y
 CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_SELFTEST is not set
 CONFIG_KALLSYMS_ALL=y
-CONFIG_KALLSYMS_ABSOLUTE_PERCPU=y
 CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
 CONFIG_ARCH_SUPPORTS_MSEAL_SYSTEM_MAPPINGS=y
 CONFIG_HAVE_PERF_EVENTS=y
@@ -338,6 +337,7 @@ CONFIG_KEXEC_SIG=y
 # CONFIG_KEXEC_SIG_FORCE is not set
 CONFIG_KEXEC_BZIMAGE_VERIFY_SIG=y
 CONFIG_KEXEC_JUMP=y
+# CONFIG_KEXEC_HANDOVER is not set
 CONFIG_CRASH_DUMP=y
 CONFIG_CRASH_HOTPLUG=y
 CONFIG_CRASH_MAX_MEMORY_RANGES=8192
@@ -432,6 +432,7 @@ CONFIG_X86_DEBUGCTLMSR=y
 CONFIG_IA32_FEAT_CTL=y
 CONFIG_X86_VMX_FEATURE_NAMES=y
 # CONFIG_PROCESSOR_SELECT is not set
+CONFIG_BROADCAST_TLB_FLUSH=y
 CONFIG_PROCESSOR_SELECT=y
 CONFIG_CPU_SUP_INTEL=y
 CONFIG_CPU_SUP_AMD=y
@@ -532,6 +533,7 @@ CONFIG_ARCH_SUPPORTS_KEXEC_SIG=y
 CONFIG_ARCH_SUPPORTS_KEXEC_SIG_FORCE=y
 CONFIG_ARCH_SUPPORTS_KEXEC_BZIMAGE_VERIFY_SIG=y
 CONFIG_ARCH_SUPPORTS_KEXEC_JUMP=y
+CONFIG_ARCH_SUPPORTS_KEXEC_HANDOVER=y
 CONFIG_ARCH_SUPPORTS_CRASH_DUMP=y
 CONFIG_ARCH_DEFAULT_CRASH_DUMP=y
 CONFIG_ARCH_SUPPORTS_CRASH_HOTPLUG=y
