Linux-NSPA: Upgrade to linux-6.16.0-rc3-rt1-5-nspa
 -> Upgrade to linux-6.16.0-rc3
 -> Add 9999-iwlwifi-cmd_ver-range_checking.patch workaround.

 Note: linux-6.16.0-rc3 broke my Wifi. as it turns out I have a
 driver/firmware mismatch OR the check is too strict. Either way,
 by adding the workaround to revert the cmd_ver range checking,
 my iwlwifi driver is functional agian.

 I believe Microsoft last updated the iwlwifi firmware in April,
 and I am running the latest UEFI/Firmware.

Signed-off-by: jordan Johnston <johnstonljordan@gmail.com>

--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -10,7 +10,6 @@
 
 ### Tweak kernel options prior to a build via nconfig
 _makemenuconfig=
-
 # Compile ONLY used modules to VASTLY reduce the number of modules built
 # and the build time.
 #
@@ -81,6 +80,9 @@ _no_RT_throttle=y
 # code. This only supports my config.
 _sched_feat_comp=y
 
+# iwlwifi on my Surface 7 is borked on Linux-6.16-rc3 ~ revert changes
+_revert_iwlwifi_cmdver=y
+
  pkgbase=linux-nspa
 _major=6.16.0
 _minor=0
@@ -91,17 +93,17 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-6.16-rc2
+_srcname=linux-6.16-rc3
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=3
+pkgrel=5
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/snapshot/linux-6.16-rc2.tar.gz"
+  "https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/snapshot/linux-6.16-rc3.tar.gz"
   "0000-patch-6.16-rc1-rt1.patch"
   "config"
   "config_surface7"
@@ -139,6 +141,7 @@ source=(
   "1123-iwlwifi-mvm-allow_DTIM_periods_to_be_skipped.patch"
   "1131-pmdomain_rt_hacks.patch"
   "9999-sched_feat-compile-time.patch"
+  "9999-iwlwifi-cmd_ver-range_checking.patch"
   "1130-sched-Introduce-Cache-aware-scheduling-V3.patch"
 )
 
@@ -167,6 +170,9 @@ prepare() {
     elif [[ $src == "9999-sched_feat-compile-time.patch" && $_sched_feat_comp == "y" ]]; then
       echo "Applying patch $src..."
       patch -Np1 < "../$src"
+    elif [[ $src == "9999-iwlwifi-cmd_ver-range_checking.patch" && $_revert_iwlwifi_cmdver == "y" ]]; then
+      echo "Applying patch $src..."
+      patch -Rp1 < "../$src"
     elif [[ $src == *.patch ]]; then
       # Apply other patches if they are present
       echo "Applying patch $src..."
@@ -492,10 +498,10 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('5e2362513cd908d1b07556c92846dd0647694beda62d687266073b049947fb71'
+sha256sums=('95c47f76a60170be0febb0860d9050e432c3471c8b78a486f56ec18ce31e8c16'
             'd97fbe6ae21d397250cbe64b54cfa5db939300a0b153f6e6857c785ba1b3eec1'
             '0d88a1316db91ab731c24e9ffaeec0dbb9be308ab571b5bea71dfffdd90bffbc'
-            'dc53eeaf110aa53fba257fdda26e219f2b3b9dc7bcdb3839276382853df75062'
+            '876e384b37d6aa39a5f30bc01b80ec8b7c28c856aa828e4db7a6afc6dec01c2a'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '19007cf46fbd578d0a2c0a2940cdbca92d31d3ca31b72ddcac0cfe6690e9bf90'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
@@ -530,4 +536,5 @@ sha256sums=('5e2362513cd908d1b07556c92846dd0647694beda62d687266073b049947fb71'
             'd02a7971e78702faee8625bdad452468b65db7606bc735c9257ff97d092a6b08'
             '208f528aa4039971d6b64b6a6e712f29dee5ec89ec2f680f4f9a637d598c01d3'
             '5c8e2ec59f1e42f1dcc6d5527fcee741aef9e4832735facb96fc8d7fe2ea08b6'
+            '4b06d1f159ded182e85413e1f54004438e91aa5c7eb3f83ef1c867a33e950c81'
             'cc6bb84cef2c628bd13d7df3859824555a8e4c53abc5e1e7851930d215e625b1')
